<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/dashboard"
        android:title="@string/text_dashboard" />

    <item
        android:id="@+id/nav_add_product"
        android:icon="@drawable/add_product"
        android:title="@string/text_addProduct" />

    <item
        android:id="@+id/upadate_product"
        android:icon="@drawable/upadate_product"
        android:title="@string/text_Product" />

    <item
        android:id="@+id/nav_order"
        android:icon="@drawable/orders"
        android:title="@string/text_Orders" />

    <item
        android:id="@+id/nav_cus"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/allCustomer" />

    <item
        android:id="@+id/nav_admin"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/text_admin" />



</menu>