<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/user_account_imge"
    tools:context=".UserAccountActivity">

    <EditText
        android:id="@+id/coustomerAccountFullname"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="164dp"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="8dp"
        android:hint="@string/firstName"
        android:inputType="text|textCapWords"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/coustomerAccountEmail"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="8dp"
        android:hint="@string/email"
        android:inputType="text|textEmailAddress"
        android:padding="8dp"
        android:textColor="@color/black"
        android:focusable="false"
        android:clickable="false"
        android:textColorHighlight="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coustomerAccountFullname" />

    <EditText
        android:id="@+id/coustomerAccountUsername"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="184dp"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="8dp"
        android:hint="@string/username"
        android:focusable="false"
        android:clickable="false"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coustomerAccountFullname" />

    <EditText
        android:id="@+id/coustomerAccountPassword"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="260dp"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:focusable="false"
        android:clickable="false"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coustomerAccountFullname" />

    <EditText
        android:id="@+id/coustomerAccountMobile"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="8dp"
        android:hint="@string/mobile"
        android:inputType="number"
        android:padding="8dp"
        android:textColor="@color/black"


        android:textColorHighlight="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coustomerAccountFullname" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/custom_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <Button
        android:id="@+id/button"
        android:layout_width="319dp"
        android:layout_height="56dp"

        android:layout_marginTop="36dp"
        android:backgroundTint="@color/purple"
        android:text="@string/userAccountUpdateButton"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coustomerAccountPassword" />

    <Button
        android:id="@+id/ChangePasswordButton"
        android:layout_width="317dp"
        android:layout_height="54dp"

        android:layout_marginTop="20dp"
        android:backgroundTint="@color/BlackOpacity"
        android:text="@string/userAccountChangePasswordButton"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userAccountTitle"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/coustomerAccountFullname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />


</androidx.constraintlayout.widget.ConstraintLayout>