<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminAccountFragment" >

    <Button
        android:id="@+id/button4"
        android:layout_width="319dp"
        android:layout_height="56dp"

        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/purple"
        android:text="@string/AdminDeatilesUpdate"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.608"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminProductName6"
        app:layout_constraintVertical_bias="0.592" />

    <EditText
        android:id="@+id/adminProductName2"
        android:layout_width="320dp"
        android:layout_height="50dp"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="588dp"
        android:background="@drawable/add_product_input_editor"
        android:drawablePadding="8dp"
        android:hint="@string/AdminName"
        android:inputType="text|textCapWords"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.928" />

    <EditText
        android:id="@+id/adminProductName3"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="492dp"
        android:background="@drawable/add_product_input_editor"
        android:clickable="false"
        android:drawablePadding="8dp"
        android:focusable="false"
        android:hint="@string/AdminEmail"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminProductName2"
        app:layout_constraintVertical_bias="0.844" />

    <EditText
        android:id="@+id/adminProductName4"
        android:layout_width="320dp"
        android:layout_height="50dp"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="416dp"
        android:background="@drawable/add_product_input_editor"
        android:drawablePadding="8dp"
        android:hint="@string/AdminMobile"
        android:inputType="number"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminProductName3"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/adminProductName5"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="332dp"
        android:background="@drawable/add_product_input_editor"
        android:clickable="false"
        android:drawablePadding="8dp"
        android:focusable="false"
        android:hint="@string/AdminUserName"
        android:inputType="text|textCapWords"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminProductName4"
        app:layout_constraintVertical_bias="0.911" />

    <EditText
        android:id="@+id/adminProductName6"
        android:layout_width="320dp"
        android:layout_height="50dp"

        android:layout_marginEnd="8dp"
        android:layout_marginBottom="248dp"
        android:background="@drawable/add_product_input_editor"
        android:drawablePadding="8dp"
        android:hint="@string/AdminPassword"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminProductName5"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/custom_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile" />
</androidx.constraintlayout.widget.ConstraintLayout>