<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_addProduct"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".navigation.AddProductFragment">


    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/addProductTitle"
        android:textColor="@color/BlackOpacity"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/categoriesSpinner"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/add_product_input_editor"
        android:padding="10dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/categoriesSpinner2"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/add_product_input_editor"
        android:padding="10dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminProductCode" />

    <EditText
        android:id="@+id/adminProductName"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"

        android:background="@drawable/add_product_input_editor"
        android:drawablePadding="8dp"
        android:hint="@string/addProductName"
        android:inputType="text|textCapWords"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoriesSpinner" />

    <EditText
        android:id="@+id/adminProductCode"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/add_product_input_editor"
        android:drawablePadding="8dp"
        android:hint="@string/addProductQty"
        android:inputType="number"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminProductQty" />

    <EditText
        android:id="@+id/adminProductQty"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"

        android:background="@drawable/add_product_input_editor"
        android:drawablePadding="8dp"
        android:hint="@string/addProductCode"
        android:inputType="text|textCapWords"
        android:padding="8dp"
        android:textColor="@color/black"

        android:textColorHighlight="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminProductName" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="110dp"
        android:layout_height="160dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.0">

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="110dp"
        android:layout_height="160dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.0">

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="110dp"
        android:layout_height="160dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toEndOf="@+id/cardView3"
        app:layout_constraintTop_toBottomOf="@+id/categoriesSpinner2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="319dp"
        android:layout_height="56dp"

        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/purple"
        android:text="@string/addProductButton"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.537" />

</androidx.constraintlayout.widget.ConstraintLayout>