<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView5"
        android:layout_width="379dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/allImageView"
            android:layout_width="100dp"
            android:layout_height="120dp"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/img"
            tools:layout_editor_absoluteY="0dp" />

        <Switch
            android:id="@+id/allProductSwich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.876"
            app:layout_constraintStart_toEndOf="@+id/allProductTitle"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/allProductStstus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/allProductActive"
            android:textColor="@color/green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView34"
            app:layout_constraintTop_toBottomOf="@+id/allProductSwich"
            app:layout_constraintVertical_bias="0.517" />

        <TextView
            android:id="@+id/allProductTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:text="black long derss"
            android:textColor="@color/purple"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/allImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/CartPriceTitle"
            app:layout_constraintBottom_toBottomOf="@+id/allProductPrice"
            app:layout_constraintStart_toEndOf="@+id/allImageView"
            app:layout_constraintTop_toTopOf="@+id/allProductPrice"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/allProductPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="4000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView32"
            app:layout_constraintTop_toBottomOf="@+id/allProductTitle"
            app:layout_constraintVertical_bias="0.404" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CartPriceTitleEnd"
            app:layout_constraintBottom_toBottomOf="@+id/allProductPrice"
            app:layout_constraintStart_toEndOf="@+id/allProductPrice"
            app:layout_constraintTop_toTopOf="@+id/allProductPrice" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>